spacing fix

--- a/scss/uikit/_white-popup.scss
+++ b/scss/uikit/_white-popup.scss
@@ -49,6 +49,7 @@
   .white-popup {
     width: 85vw;
     padding: 20px;
+    padding-bottom: 17%;
   }
 
   .white-popup-wrapper {
